<resources>
    <string name="app_name">PMA_1</string>
    <string name="til_name">Enter Prof. Surname</string>
    <string name="til_surnname">Enter Subject</string>
    <string name="btn_send_name">Next</string>
    <string name="txt_personal_info"><u><i><b>Personal Info</b></i></u></string>
    <string name="til_subject">Enter Subject</string>
    <string name="btn_send_subject">Finish</string>
    <string name="txt_student_info"><u><i><b>Student Info</b></i></u></string>
    <string name="txt_name">Name: </string>
    <string name="txt_subject">Subject: </string>
    <string name="btn_exit_summary">Exit</string>
    <string name="txt_summary"><u><i><b>Summary</b></i></u></string>
    <string name="profile_img">profile image</string>
    <string name="tv_birth_date">Birth Date:</string>
    <string name="et_birth_date">Enter Birth Date</string>
    <string name="tv_college_year">College year:</string>
    <string name="et_college_year">Enter College Year</string>
    <string name="tv_lectures">Lectures: </string>
    <string name="et_lectures">Enter Lectures</string>
    <string name="tv_practices">Practices: </string>
    <string name="et_practices">Enter Practices</string>
    <string name="tv_student_info">Student Info: </string>
    <string name="tv_subject_info"><i>Subject Info: </i>></string>
    <string name="tv_students">Students: </string>
    <string name="select_language">Langauge</string>
    <string name="home_fragment">HOME</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_add_student">Add</string>
    <string name="bottom_nav_subject">Subject</string>
    <string name="add_fragment">Add</string>
    <string name="student_subject">Subject</string>
    <string name="students_empty">No Students added</string>
    <string name="til_student_name">Enter Name</string>
    <string name="til_student_surname">Enter Surname</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="uncompleted_student">Student isn\'t completed</string>
    <string name="uncompleted_subject">Subject isn\'t completed</string>
    <string name="tab_layout_student">Student</string>
    <string name="tab_layout_subject">Subject</string>
    <string name="tab_layout_summary">Summary</string>



    <string-array name="students_list">
        <item>Pavo SKočibušić</item>
        <item>Fran SKočibušić</item>
        <item>Antonijo SKočibušić</item>
        <item>Denis SKočibušić</item>
        <item>Pavo SKočibušić</item>
        <item>Fran SKočibušić</item>
        <item>Antonijo SKočibušić</item>
        <item>Denis SKočibušić</item>
    </string-array>

    <string-array name="student_subject">
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>
        <item>RANDOM SUBJECT</item>

    </string-array>


</resources>