<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".PersonalInfoActivity">


    <Button
        android:id="@+id/btnExitSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit_summary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hglFooter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hglHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hglFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/txtSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_student_info"
        android:textColor="@color/summary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hglHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        app:layout_constraintBottom_toTopOf="@+id/hglBody"
        app:layout_constraintEnd_toStartOf="@+id/vglCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hglHeader" />

    <TextView
        android:id="@+id/txtSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_subject"
        app:layout_constraintBottom_toTopOf="@+id/hglFooter"
        app:layout_constraintEnd_toStartOf="@+id/vglCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hglBody" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vglCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32" />

    <EditText
        android:id="@+id/ptxtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/hglBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vglCenter"
        app:layout_constraintTop_toTopOf="@+id/hglHeader" />

    <EditText
        android:id="@+id/ptxtSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/hglFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vglCenter"
        app:layout_constraintTop_toTopOf="@+id/hglBody" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hglBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.375" />

</androidx.constraintlayout.widget.ConstraintLayout>